src/main/resources/tests/Semantics/good/nameFunction.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
begin
   null;
end ExampleProcedure; -- Correct
