src/main/resources/tests/Semantics/bad/nameFunction.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure AnotherProcedure is
begin
   put();
end ExampleProcedure; -- Doit générer une erreur de compilation.
